--- a/src/style.css
+++ b/src/style.css
@@ -24,9 +24,13 @@ a:hover {
 }
 
 body {
+  background-image: url("../src//ezgif-4-6b2c00af7f.gif");
+  background-size: 100% 100%;
+
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
   margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
@@ -40,7 +44,7 @@ h1 {
   margin: 0;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 15%;
   transform: translate(-50%, -50%);
 }
 
@@ -51,12 +55,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #1a1b15;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #c6caaa;
 }
 button:focus,
 button:focus-visible {
